--- a/categories.html
+++ b/categories.html
@@ -2,7 +2,7 @@
 <html lang="cn">
 <head>
         <meta charset="utf-8" />
-        <title>Perrie</title>
+        <title>Perrie's Home</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,19 +12,21 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Perrie </a></h1>
+                <h1><a href="/">Perrie's Home </a></h1>
                 <nav><ul>
+                    <li><a href="/category/note.html">note</a></li>
                     <li><a href="/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="/category/note.html">note</a></li>
     <li><a href="/category/review.html">Review</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
+                            <li><a href="https://github.com/QianPeili">Github</a></li>
                             <li><a href="http://python.org/">Python.org</a></li>
                             <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
                             <li><a href="#">You can modify those links in your config file</a></li>
