--- a/authors.html
+++ b/authors.html
@@ -16,13 +16,14 @@
                 <nav><ul>
                     <li><a href="/category/note.html">note</a></li>
                     <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/category/tips.html">tips</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Perrie's Home</h1>
     <ul>
-        <li><a href="/author/perrie.html">perrie</a> (2)</li>
+        <li><a href="/author/perrie.html">perrie</a> (3)</li>
     </ul>
 </section>
 
