--- a/categories.html
+++ b/categories.html
@@ -16,11 +16,13 @@
                 <nav><ul>
                     <li><a href="/category/note.html">note</a></li>
                     <li><a href="/category/review.html">Review</a></li>
+                    <li><a href="/category/tips.html">tips</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
     <li><a href="/category/note.html">note</a></li>
     <li><a href="/category/review.html">Review</a></li>
+    <li><a href="/category/tips.html">tips</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
