--- a/archives.html
+++ b/archives.html
@@ -16,13 +16,15 @@
                 <nav><ul>
                     <li><a href="/category/note.html">note</a></li>
                     <li><a href="/category/review.html">Review</a></li>
-                    <li><a href="/category/tips.html">tips</a></li>
+                    <li><a href="/category/tips.html">Tips</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Perrie's Home</h1>
 
 <dl>
+    <dt>周五 07 四月 2017</dt>
+    <dd><a href="/unicodexiao-ji-qiao.html">unicode小技巧</a></dd>
     <dt>周四 16 三月 2017</dt>
     <dd><a href="/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html">用mongodb统计去重后的数量</a></dd>
     <dt>周一 26 十二月 2016</dt>
