--- a/archives.html
+++ b/archives.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -27,7 +27,7 @@
 <meta property="og:title" content="Perrie's Home"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="http://qianpeili.github.io"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>Perrie's Home &ndash;     Archives
@@ -37,16 +37,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
+      <a href="http://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="">爪了个子(QianPeili)</a></h1>
+      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
         <ul class="list">
 
-          <li><a href="/index.html" target="_blank">Home</a></li>
           <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
@@ -63,7 +62,7 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="http://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -81,18 +80,19 @@
   <div>
     <dl>
       <dt>周一 22 五月 2017</dt>
-      <dd><a href="/gode-yi-lai-guan-li-gong-ju-govendor.html">Go的依赖管理工具govendor</a></dd>
+      <dd><a href="http://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html">Go的依赖管理工具govendor</a></dd>
       <dt>周六 20 五月 2017</dt>
-      <dd><a href="/tcpjing-shou-shi-yan.html">tcp经受时延</a></dd>
-      <dd><a href="/tcpdumpde-shi-yong-shi-li.html">tcpdump的使用实例</a></dd>
+      <dd><a href="http://qianpeili.github.io/tcpjing-shou-shi-yan.html">tcp经受时延</a></dd>
+      <dt>周六 20 五月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/tcpdumpde-shi-yong-shi-li.html">tcpdump的使用实例</a></dd>
       <dt>周五 07 四月 2017</dt>
-      <dd><a href="/unicodexiao-ji-qiao.html">unicode小技巧</a></dd>
+      <dd><a href="http://qianpeili.github.io/unicodexiao-ji-qiao.html">unicode小技巧</a></dd>
       <dt>周四 16 三月 2017</dt>
-      <dd><a href="/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html">用mongodb统计去重后的数量</a></dd>
+      <dd><a href="http://qianpeili.github.io/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html">用mongodb统计去重后的数量</a></dd>
       <dt>周一 26 十二月 2016</dt>
-      <dd><a href="/replace-type-code-with-statestrategy.html">Replace Type Code With State/Strategy</a></dd>
+      <dd><a href="http://qianpeili.github.io/replace-type-code-with-statestrategy.html">Replace Type Code With State/Strategy</a></dd>
       <dt>周一 05 十二月 2016</dt>
-      <dd><a href="/my-first-review.html">My First Review</a></dd>
+      <dd><a href="http://qianpeili.github.io/my-first-review.html">My First Review</a></dd>
     </dl>
   </div>
 </article>
@@ -112,7 +112,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Perrie's Home ",
-  "url" : "",
+  "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
