--- a/my-first-review.html
+++ b/my-first-review.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -27,11 +27,11 @@
 <meta property="og:title" content="My First Review"/>
 <meta property="og:description" content="好吧，打扫一下，准备吧github page重新用起来 这次没用hexo，用了pelican啦~"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/my-first-review.html"/>
+<meta property="og:url" content="http://qianpeili.github.io/my-first-review.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-12-05 16:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
 <meta property="article:section" content="Review"/>
 <meta property="og:image" content="/images/profile.png">
 
@@ -41,16 +41,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
+      <a href="http://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="">爪了个子(QianPeili)</a></h1>
+      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
         <ul class="list">
 
-          <li><a href="/index.html" target="_blank">Home</a></li>
           <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
@@ -67,7 +66,7 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="http://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -81,7 +80,7 @@
   <header>
     <h1 id="my-first-review">My First Review</h1>
     <p>
-          Posted on 周一 05 十二月 2016 in <a href="/category/review.html">Review</a>
+          Posted on 周一 05 十二月 2016 in <a href="http://qianpeili.github.io/category/review.html">Review</a>
 
 
     </p>
@@ -117,7 +116,7 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Perrie's Home ",
-  "url" : "",
+  "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
