--- a/tcpdumpde-shi-yong-shi-li.html
+++ b/tcpdumpde-shi-yong-shi-li.html
@@ -4,10 +4,10 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
 
@@ -27,11 +27,11 @@
 <meta property="og:title" content="tcpdump的使用实例"/>
 <meta property="og:description" content="给出了一些tcpdump的使用例子，实践才是学习的好办法~"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/tcpdumpde-shi-yong-shi-li.html"/>
+<meta property="og:url" content="http://qianpeili.github.io/tcpdumpde-shi-yong-shi-li.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-20 13:46:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
 <meta property="article:section" content="note"/>
 <meta property="og:image" content="/images/profile.png">
 
@@ -41,16 +41,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
+      <a href="http://qianpeili.github.io">
         <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
       </a>
-      <h1><a href="">爪了个子(QianPeili)</a></h1>
+      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
 <p>我所见，我所想</p>
       <nav>
         <ul class="list">
 
-          <li><a href="/index.html" target="_blank">Home</a></li>
           <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
@@ -67,7 +66,7 @@
   <main>
 
     <nav>
-      <a href="">    Home
+      <a href="http://qianpeili.github.io">    Home
 </a>
 
       <a href="/archives.html">Archives</a>
@@ -81,7 +80,7 @@
   <header>
     <h1 id="tcpdumpde-shi-yong-shi-li">tcpdump的使用实例</h1>
     <p>
-          Posted on 周六 20 五月 2017 in <a href="/category/note.html">note</a>
+          Posted on 周六 20 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">note</a>
 
 
     </p>
@@ -210,7 +209,7 @@ sudo tcpdump -i eno1 dst port 5000
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Perrie's Home ",
-  "url" : "",
+  "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
 }
