--- a/categories.html
+++ b/categories.html
@@ -20,17 +20,17 @@
   <meta name="robots" content="" />
 
 
-    <meta name="author" content="Perrie" />
+    <meta name="author" content="QianPeili" />
     <meta name="description" content="" />
-<meta property="og:site_name" content="Perrie's Home"/>
+<meta property="og:site_name" content="爪了个子"/>
 <meta property="og:type" content="blog"/>
-<meta property="og:title" content="Perrie's Home"/>
+<meta property="og:title" content="爪了个子"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="http://qianpeili.github.io"/>
 <meta property="og:image" content="/images/profile.png">
 
-  <title>Perrie's Home &ndash;     Categories
+  <title>爪了个子 &ndash;     Categories
 </title>
 
 </head>
@@ -87,7 +87,7 @@
 </article>
 
     <footer>
-<p>&copy; Perrie </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
@@ -100,7 +100,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Perrie's Home ",
+  "name": " 爪了个子 ",
   "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
