--- a/my-first-review.html
+++ b/my-first-review.html
@@ -20,10 +20,10 @@
   <meta name="robots" content="" />
 
 
-<meta name="author" content="Perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="好吧，打扫一下，准备吧github page重新用起来 这次没用hexo，用了pelican啦~" />
 <meta name="keywords" content="">
-<meta property="og:site_name" content="Perrie's Home"/>
+<meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="My First Review"/>
 <meta property="og:description" content="好吧，打扫一下，准备吧github page重新用起来 这次没用hexo，用了pelican啦~"/>
 <meta property="og:locale" content="en_US"/>
@@ -31,11 +31,11 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-12-05 16:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Review"/>
 <meta property="og:image" content="/images/profile.png">
 
-  <title>Perrie's Home &ndash; My First Review</title>
+  <title>爪了个子 &ndash; My First Review</title>
 
 </head>
 <body>
@@ -102,7 +102,7 @@
 </article>
 
     <footer>
-<p>&copy; Perrie </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
@@ -115,7 +115,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Perrie's Home ",
+  "name": " 爪了个子 ",
   "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
