--- a/gode-yi-lai-guan-li-gong-ju-govendor.html
+++ b/gode-yi-lai-guan-li-gong-ju-govendor.html
@@ -20,10 +20,10 @@
   <meta name="robots" content="" />
 
 
-<meta name="author" content="Perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="依赖管理是我接触 go 以来，觉得比较麻烦的事情。 不过在 go-1.5 版本中，出现了一个 vendor 的概念，并且 vendor 作为一个默认功能存在于1.7之后的版本中。 vendor的概念就类似于python中的 virtualenv 建立的 env，它是一个文件夹，里面存放了项目所用的依赖。如果项目中有个文件 import 了第三方的 package，而这个 package 又存在项目的 vendor 目录中，这个文件编译的时候会从 vendor 中 import 这个 package 比如： $GOPATH | src/ | | project/ | | | main.go | | | vendor/ | | | | github.com/pkg/sftp/ | | | | golang.org/x …" />
 <meta name="keywords" content="">
-<meta property="og:site_name" content="Perrie's Home"/>
+<meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="Go的依赖管理工具govendor"/>
 <meta property="og:description" content="依赖管理是我接触 go 以来，觉得比较麻烦的事情。 不过在 go-1.5 版本中，出现了一个 vendor 的概念，并且 vendor 作为一个默认功能存在于1.7之后的版本中。 vendor的概念就类似于python中的 virtualenv 建立的 env，它是一个文件夹，里面存放了项目所用的依赖。如果项目中有个文件 import 了第三方的 package，而这个 package 又存在项目的 vendor 目录中，这个文件编译的时候会从 vendor 中 import 这个 package 比如： $GOPATH | src/ | | project/ | | | main.go | | | vendor/ | | | | github.com/pkg/sftp/ | | | | golang.org/x …"/>
 <meta property="og:locale" content="en_US"/>
@@ -31,11 +31,11 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-22 18:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="note"/>
 <meta property="og:image" content="/images/profile.png">
 
-  <title>Perrie's Home &ndash; Go的依赖管理工具govendor</title>
+  <title>爪了个子 &ndash; Go的依赖管理工具govendor</title>
 
 </head>
 <body>
@@ -223,7 +223,7 @@ pl  Bomber/test
 </article>
 
     <footer>
-<p>&copy; Perrie </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
@@ -236,7 +236,7 @@ pl  Bomber/test
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Perrie's Home ",
+  "name": " 爪了个子 ",
   "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
