--- a/replace-type-code-with-statestrategy.html
+++ b/replace-type-code-with-statestrategy.html
@@ -20,10 +20,10 @@
   <meta name="robots" content="" />
 
 
-<meta name="author" content="Perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="今天在阅读《重构：改善既有代码的设计》第一个案例中，遇到了一个replace type code with state/strategy的概念，不是很了解， 但大概懂了意思。决定用python实现一下其代码。 觉得主要思想是： 一个对象(Movie)有一个属性(price_code)，这个属性的不同会导致对象的方法(get_charge)返回不同的结果。 最开始的想法肯定是用subclass进行分类，但是一部电影可以更换price_code，一个对象没法更换其所属类，所以直接建立一个price对象作为属性，改变price_code时，即改变了price对象。 重构前的代码： class Movie(object): REGULAR = 0 NEW_RELEASE = 1 CHILDRENS = 2 def __init__ …" />
 <meta name="keywords" content="">
-<meta property="og:site_name" content="Perrie's Home"/>
+<meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="Replace Type Code With State/Strategy"/>
 <meta property="og:description" content="今天在阅读《重构：改善既有代码的设计》第一个案例中，遇到了一个replace type code with state/strategy的概念，不是很了解， 但大概懂了意思。决定用python实现一下其代码。 觉得主要思想是： 一个对象(Movie)有一个属性(price_code)，这个属性的不同会导致对象的方法(get_charge)返回不同的结果。 最开始的想法肯定是用subclass进行分类，但是一部电影可以更换price_code，一个对象没法更换其所属类，所以直接建立一个price对象作为属性，改变price_code时，即改变了price对象。 重构前的代码： class Movie(object): REGULAR = 0 NEW_RELEASE = 1 CHILDRENS = 2 def __init__ …"/>
 <meta property="og:locale" content="en_US"/>
@@ -31,11 +31,11 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-12-26 20:55:00+08:00"/>
 <meta property="article:modified_time" content="2016-12-28 12:40:00+08:00"/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="note"/>
 <meta property="og:image" content="/images/profile.png">
 
-  <title>Perrie's Home &ndash; Replace Type Code With State/Strategy</title>
+  <title>爪了个子 &ndash; Replace Type Code With State/Strategy</title>
 
 </head>
 <body>
@@ -262,7 +262,7 @@
 </article>
 
     <footer>
-<p>&copy; Perrie </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
@@ -275,7 +275,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Perrie's Home ",
+  "name": " 爪了个子 ",
   "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
