--- a/unicodexiao-ji-qiao.html
+++ b/unicodexiao-ji-qiao.html
@@ -20,10 +20,10 @@
   <meta name="robots" content="" />
 
 
-<meta name="author" content="Perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="今天遇到一个问题 在mysql查询日志时，发现一些unicode字符串存储变成了 u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42 这个形式，手动加\虽然可行，但毕竟不是长久的办法 所以最好的办法是将字符串中的内容，根据unicode格式转换成unicode 代码如下: import re a = "u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42" pattern = re.compile("\u(.{4})") maps = pattern.findall(a) s = "" for i in maps: tmp = unichr(int(i, 16)) s += tmp print s 就会输出原先代表的文字意思了 注： 以上是代码是python2版本， python3需要把unichr改成chr" />
 <meta name="keywords" content="">
-<meta property="og:site_name" content="Perrie's Home"/>
+<meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="unicode小技巧"/>
 <meta property="og:description" content="今天遇到一个问题 在mysql查询日志时，发现一些unicode字符串存储变成了 u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42 这个形式，手动加\虽然可行，但毕竟不是长久的办法 所以最好的办法是将字符串中的内容，根据unicode格式转换成unicode 代码如下: import re a = "u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42" pattern = re.compile("\u(.{4})") maps = pattern.findall(a) s = "" for i in maps: tmp = unichr(int(i, 16)) s += tmp print s 就会输出原先代表的文字意思了 注： 以上是代码是python2版本， python3需要把unichr改成chr"/>
 <meta property="og:locale" content="en_US"/>
@@ -31,11 +31,11 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-04-07 10:20:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Tips"/>
 <meta property="og:image" content="/images/profile.png">
 
-  <title>Perrie's Home &ndash; unicode小技巧</title>
+  <title>爪了个子 &ndash; unicode小技巧</title>
 
 </head>
 <body>
@@ -123,7 +123,7 @@
 </article>
 
     <footer>
-<p>&copy; Perrie </p>
+<p>&copy; QianPeili </p>
 <p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
 </p>    </footer>
   </main>
@@ -136,7 +136,7 @@
 {
   "@context" : "http://schema.org",
   "@type" : "Blog",
-  "name": " Perrie's Home ",
+  "name": " 爪了个子 ",
   "url" : "http://qianpeili.github.io",
   "image": "/images/profile.png",
   "description": ""
