--- a/archives.html
+++ b/archives.html
@@ -1,42 +1,132 @@
+
 <!DOCTYPE html>
 <html lang="cn">
 <head>
-        <title>爪了个子</title>
-        <meta charset="utf-8" />
+  <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
+
+    <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/stylesheet/style.min.css">
+
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="http://qianpeili.github.io/theme/font-awesome/css/font-awesome.min.css">
+
+
+
+
+
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="" />
+
+
+    <meta name="author" content="QianPeili" />
+    <meta name="description" content="" />
+<meta property="og:site_name" content="爪了个子"/>
+<meta property="og:type" content="blog"/>
+<meta property="og:title" content="爪了个子"/>
+<meta property="og:description" content=""/>
+<meta property="og:locale" content="en_US"/>
+<meta property="og:url" content="http://qianpeili.github.io"/>
+<meta property="og:image" content="/images/profile.png">
+
+  <title>爪了个子 &ndash;     Archives
+</title>
+
 </head>
+<body>
+  <aside>
+    <div>
+      <a href="http://qianpeili.github.io">
+        <img src="/images/profile.png" alt="爪了个子(QianPeili)" title="爪了个子(QianPeili)">
+      </a>
+      <h1><a href="http://qianpeili.github.io">爪了个子(QianPeili)</a></h1>
 
-<body id="index" class="home">
-        <header id="banner" class="body">
-                <h1><a href="http://qianpeili.github.io/">爪了个子 <strong>我所见，我所想</strong></a></h1>
-        </header><!-- /#banner -->
-        <nav id="menu"><ul>
-            <li><a href="/archives.html">Archives</a></li>
-            <li><a href="/categories.html">Categories</a></li>
-            <li><a href="/tags.html">Tags</a></li>
-        </ul></nav><!-- /#menu -->
-<h1>Archives for 爪了个子</h1>
+<p>我所见，我所想</p>
+      <nav>
+        <ul class="list">
 
-<dl>
-    <dt>周一 22 五月 2017</dt>
-    <dd><a href="http://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html">Go的依赖管理工具govendor</a></dd>
-    <dt>周六 20 五月 2017</dt>
-    <dd><a href="http://qianpeili.github.io/tcpjing-shou-shi-yan.html">tcp经受时延</a></dd>
-    <dt>周六 20 五月 2017</dt>
-    <dd><a href="http://qianpeili.github.io/tcpdumpde-shi-yong-shi-li.html">tcpdump的使用实例</a></dd>
-    <dt>周五 07 四月 2017</dt>
-    <dd><a href="http://qianpeili.github.io/unicodexiao-ji-qiao.html">unicode小技巧</a></dd>
-    <dt>周四 16 三月 2017</dt>
-    <dd><a href="http://qianpeili.github.io/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html">用mongodb统计去重后的数量</a></dd>
-    <dt>周一 26 十二月 2016</dt>
-    <dd><a href="http://qianpeili.github.io/replace-type-code-with-statestrategy.html">Replace Type Code With State/Strategy</a></dd>
-    <dt>周一 05 十二月 2016</dt>
-    <dd><a href="http://qianpeili.github.io/my-first-review.html">My First Review</a></dd>
-</dl>
-        <footer id="contentinfo" class="body">
-                <address id="about" class="vcard body">
-                Proudly powered by <a href="http://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="http://python.org">Python</a>.
-                </address><!-- /#about -->
-        </footer><!-- /#contentinfo -->
+          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
+        </ul>
+      </nav>
+
+      <ul class="social">
+        <li><a class="sc-github" href="https://github.com/QianPeili" target="_blank"><i class="fa fa-github"></i></a></li>
+        <li><a class="sc-qq" href="394511725" target="_blank"><i class="fa fa-qq"></i></a></li>
+      </ul>
+    </div>
+
+
+  </aside>
+  <main>
+
+    <nav>
+      <a href="http://qianpeili.github.io">    Home
+</a>
+
+      <a href="/archives.html">Archives</a>
+      <a href="/categories.html">Categories</a>
+      <a href="/tags.html">Tags</a>
+
+
+    </nav>
+
+<article class="single">
+  <header>
+    <h1>    Archives
+</h1>
+  </header>
+  <div>
+    <dl>
+      <dt>周一 22 五月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html">Go的依赖管理工具govendor</a></dd>
+      <dt>周六 20 五月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/tcpjing-shou-shi-yan.html">tcp经受时延</a></dd>
+      <dt>周六 20 五月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/tcpdumpde-shi-yong-shi-li.html">tcpdump的使用实例</a></dd>
+      <dt>周五 07 四月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/unicodexiao-ji-qiao.html">unicode小技巧</a></dd>
+      <dt>周四 16 三月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html">用mongodb统计去重后的数量</a></dd>
+      <dt>周一 26 十二月 2016</dt>
+      <dd><a href="http://qianpeili.github.io/replace-type-code-with-statestrategy.html">Replace Type Code With State/Strategy</a></dd>
+      <dt>周一 05 十二月 2016</dt>
+      <dd><a href="http://qianpeili.github.io/my-first-review.html">My First Review</a></dd>
+    </dl>
+  </div>
+</article>
+
+    <footer>
+<p>&copy;  </p>
+<p>    Powered by <a href="http://getpelican.com" target="_blank">Pelican</a> - <a href="https://github.com/alexandrevicenzi/flex" target="_blank">Flex</a> theme by <a href="http://alexandrevicenzi.com" target="_blank">Alexandre Vicenzi</a>
+</p>    </footer>
+  </main>
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-100449520-1', 'auto');
+  ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+
+
+
+<script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "Blog",
+  "name": " 爪了个子 ",
+  "url" : "http://qianpeili.github.io",
+  "image": "/images/profile.png",
+  "description": ""
+}
+</script>
+
 </body>
 </html>
