--- a/authors.html
+++ b/authors.html
@@ -67,6 +67,7 @@
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
+      <a href="/authors.html">Authors</a>
       <a href="/tags.html">Tags</a>
 
 
@@ -79,8 +80,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://qianpeili.github.io/author/perrie.html">perrie</a> (2)</li>
-      <li><a href="http://qianpeili.github.io/author/qianpeili.html">QianPeili</a> (5)</li>
+      <li><a href="http://qianpeili.github.io/author/qianpeili.html">QianPeili</a> (7)</li>
     </ul>
   </div>
 </article>
