--- a/tcpdumpde-shi-yong-shi-li.html
+++ b/tcpdumpde-shi-yong-shi-li.html
@@ -20,7 +20,7 @@
     <meta name="robots" content="" />
 
 
-<meta name="author" content="perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="给出了一些tcpdump的使用例子，实践才是学习的好办法~" />
 <meta name="keywords" content="">
 
@@ -32,8 +32,8 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-20 13:46:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
-<meta property="article:section" content="note"/>
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:section" content="Note"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; tcpdump的使用实例</title>
@@ -72,6 +72,7 @@
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
+      <a href="/authors.html">Authors</a>
       <a href="/tags.html">Tags</a>
 
 
@@ -82,7 +83,7 @@
       
     <h1 id="tcpdumpde-shi-yong-shi-li">tcpdump的使用实例</h1>
     <p>
-          Posted on 周六 20 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">note</a>
+          Posted on 周六 20 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
