--- a/replace-type-code-with-statestrategy.html
+++ b/replace-type-code-with-statestrategy.html
@@ -72,6 +72,7 @@
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
+      <a href="/authors.html">Authors</a>
       <a href="/tags.html">Tags</a>
 
 
