--- a/tcpjing-shou-shi-yan.html
+++ b/tcpjing-shou-shi-yan.html
@@ -20,7 +20,7 @@
     <meta name="robots" content="" />
 
 
-<meta name="author" content="perrie" />
+<meta name="author" content="QianPeili" />
 <meta name="description" content="学 TCP/IP 协议听到最多的就是三次握手和四次挥手协议了吧。由于最近在折腾 tcpdump ，就想着实战抓一下 tcp 协议的这个握手和挥手协议。于是我在本地向内网测试机器的服务上发起了一个 POST 请求，抓到如下信息： 15:05:03.904647 IP socket-client.56558 &gt; socket-server.3000: Flags [S], seq 2090421259, win 64240, options [mss 1460,nop,wscale 8,nop,nop,sackOK], length 0 15:05:03.904699 IP socket-server.3000 &gt; socket …" />
 <meta name="keywords" content="">
 
@@ -32,8 +32,8 @@
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2017-05-20 16:15:00+08:00"/>
 <meta property="article:modified_time" content=""/>
-<meta property="article:author" content="http://qianpeili.github.io/author/perrie.html">
-<meta property="article:section" content="note"/>
+<meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
+<meta property="article:section" content="Note"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; tcp经受时延</title>
@@ -72,6 +72,7 @@
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
+      <a href="/authors.html">Authors</a>
       <a href="/tags.html">Tags</a>
 
 
@@ -82,7 +83,7 @@
       
     <h1 id="tcpjing-shou-shi-yan">tcp经受时延</h1>
     <p>
-          Posted on 周六 20 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">note</a>
+          Posted on 周六 20 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
