--- a/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
+++ b/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
@@ -72,6 +72,7 @@
 
       <a href="/archives.html">Archives</a>
       <a href="/categories.html">Categories</a>
+      <a href="/authors.html">Authors</a>
       <a href="/tags.html">Tags</a>
 
 
