add post nginx request

--- a/archives.html
+++ b/archives.html
@@ -82,6 +82,8 @@
     <dl>
       <dt>周二 13 六月 2017</dt>
       <dd><a href="http://qianpeili.github.io/git-submodulede-shi-yong.html">Git Submodule的使用</a></dd>
+      <dt>周五 09 六月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/fan-yi-nginx-ru-he-chu-li-yi-ge-qing-qiu.html">【翻译】 Nginx 如何处理一个请求</a></dd>
       <dt>周一 22 五月 2017</dt>
       <dd><a href="http://qianpeili.github.io/gode-yi-lai-guan-li-gong-ju-govendor.html">Go的依赖管理工具govendor</a></dd>
       <dt>周六 20 五月 2017</dt>
