--- a/git-submodulede-shi-yong.html
+++ b/git-submodulede-shi-yong.html
@@ -33,7 +33,7 @@
 <meta property="article:published_time" content="2017-06-13 19:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
-<meta property="article:section" content="note"/>
+<meta property="article:section" content="translation"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; Git Submodule的使用</title>
@@ -83,7 +83,7 @@
       
     <h1 id="git-submodulede-shi-yong">Git Submodule的使用</h1>
     <p>
-          Posted on 周二 13 六月 2017 in <a href="http://qianpeili.github.io/category/note.html">note</a>
+          Posted on 周二 13 六月 2017 in <a href="http://qianpeili.github.io/category/translation.html">translation</a>
 
 
     </p>
