--- a/categories.html
+++ b/categories.html
@@ -83,6 +83,7 @@
       <li><a href="http://qianpeili.github.io/category/note.html">note</a> (5)</li>
       <li><a href="http://qianpeili.github.io/category/review.html">Review</a> (1)</li>
       <li><a href="http://qianpeili.github.io/category/tips.html">Tips</a> (2)</li>
+      <li><a href="http://qianpeili.github.io/category/translation.html">translation</a> (1)</li>
     </ul>
   </div>
 </article>
