--- a/archives.html
+++ b/archives.html
@@ -46,7 +46,7 @@
       <nav>
         <ul class="list">
 
-          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="/about-me.html" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
       </nav>
@@ -98,6 +98,8 @@
       <dd><a href="http://qianpeili.github.io/replace-type-code-with-statestrategy.html">Replace Type Code With State/Strategy</a></dd>
       <dt>周一 05 十二月 2016</dt>
       <dd><a href="http://qianpeili.github.io/my-first-review.html">My First Review</a></dd>
+      <dt>周一 13 六月 2011</dt>
+      <dd><a href="http://qianpeili.github.io/about-me.html">About Me</a></dd>
     </dl>
   </div>
 </article>
