--- a/categories.html
+++ b/categories.html
@@ -46,7 +46,7 @@
       <nav>
         <ul class="list">
 
-          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="/about-me.html" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
       </nav>
@@ -80,6 +80,7 @@
   </header>
   <div>
     <ul class="list">
+      <li><a href="http://qianpeili.github.io/category/misc.html">misc</a> (1)</li>
       <li><a href="http://qianpeili.github.io/category/note.html">note</a> (5)</li>
       <li><a href="http://qianpeili.github.io/category/review.html">Review</a> (1)</li>
       <li><a href="http://qianpeili.github.io/category/tips.html">Tips</a> (2)</li>
