--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <nav>
         <ul class="list">
 
-          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="/about-me.html" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
       </nav>
@@ -331,6 +331,29 @@ server {
 <p>这次没用hexo，用了pelican啦~</p>
       <br>
       <a class="btn" href="http://qianpeili.github.io/my-first-review.html#my-first-review">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
+    <h2><a href="http://qianpeili.github.io/about-me.html#about-me">About Me</a></h2>
+    <p>
+          Posted on 周一 13 六月 2011 in <a href="http://qianpeili.github.io/category/misc.html">misc</a>
+
+
+
+    </p>
+  </header>
+  <div>
+      <ul>
+<li>曾经的网瘾少女</li>
+<li>现在的IT民工</li>
+<li>擅长Pyhon，熟悉Golang</li>
+<li>我爱代码~</li>
+</ul>
+      <br>
+      <a class="btn" href="http://qianpeili.github.io/about-me.html#about-me">    Continue reading
 </a>
   </div>
 </article>
