--- a/authors.html
+++ b/authors.html
@@ -46,7 +46,7 @@
       <nav>
         <ul class="list">
 
-          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="/about-me.html" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
       </nav>
@@ -80,7 +80,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://qianpeili.github.io/author/qianpeili.html">QianPeili</a> (9)</li>
+      <li><a href="http://qianpeili.github.io/author/qianpeili.html">QianPeili</a> (10)</li>
     </ul>
   </div>
 </article>
