--- a/tcpdumpde-shi-yong-shi-li.html
+++ b/tcpdumpde-shi-yong-shi-li.html
@@ -51,7 +51,7 @@
       <nav>
         <ul class="list">
 
-          <li><a href="https://github.com/QianPeili" target="_blank">About</a></li>
+          <li><a href="/about-me.html" target="_blank">About</a></li>
           <li><a href="mailto:qianperry@outlook.com" target="_blank">Email</a></li>
         </ul>
       </nav>
