--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>周日 09 七月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/bashshu-chu-zhong-ding-xiang.html">Bash输出重定向</a></dd>
       <dt>周二 13 六月 2017</dt>
       <dd><a href="http://qianpeili.github.io/git-submodulede-shi-yong.html">Git Submodule的使用</a></dd>
       <dt>周五 09 六月 2017</dt>
