--- a/git-submodulede-shi-yong.html
+++ b/git-submodulede-shi-yong.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="Submodule介绍 前几天因为项目需求，接触了Git的Submodule功能。 客户端和服务端的项目各自独立开发，因为要用到一个共同的子库——SubA，SubA即需要独立保持版本信息，又需要同时给客户端和服务端的项目提供支持。Submodule正好可以帮助我们管理这个问题。 Submodule语法 git submodule [--quiet] add [&lt;options&gt;] [--] &lt;repository[&lt;path&gt;] git submodule [--quiet] status [--cached] [--recursive] [--] [&lt;path&gt;…​] git submodule [--quiet] init [--] [&lt;path&gt;…​] git submodule [--quiet] deinit [-f|--force] (--all|[--] &lt;path&gt;…​) git submodule [--quiet] update [&lt;options&gt;] [--] [&lt;path&gt;…​] git submodule …" />
-<meta name="keywords" content="">
+<meta name="keywords" content="git">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="Git Submodule的使用"/>
@@ -33,7 +33,8 @@
 <meta property="article:published_time" content="2017-06-13 19:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
-<meta property="article:section" content="translation"/>
+<meta property="article:section" content="Note"/>
+<meta property="article:tag" content="git"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; Git Submodule的使用</title>
@@ -83,7 +84,7 @@
       
     <h1 id="git-submodulede-shi-yong">Git Submodule的使用</h1>
     <p>
-          Posted on 周二 13 六月 2017 in <a href="http://qianpeili.github.io/category/translation.html">translation</a>
+          Posted on 周二 13 六月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -206,6 +207,7 @@ Cloning into <span class="s1">&#39;F:/MainCopy/submodule/A&#39;</span>...
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/git.html">git</a>
     </p>
   </div>
 
