--- a/tcpdumpde-shi-yong-shi-li.html
+++ b/tcpdumpde-shi-yong-shi-li.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="给出了一些tcpdump的使用例子，实践才是学习的好办法~" />
-<meta name="keywords" content="">
+<meta name="keywords" content="linux, tcpdump">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="tcpdump的使用实例"/>
@@ -34,6 +34,8 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
+<meta property="article:tag" content="linux"/>
+<meta property="article:tag" content="tcpdump"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; tcpdump的使用实例</title>
@@ -189,6 +191,8 @@ sudo tcpdump -i eno1 dst port 5000
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/linux.html">linux</a>
+      <a href="http://qianpeili.github.io/tag/tcpdump.html">tcpdump</a>
     </p>
   </div>
 
