--- a/tcpjing-shou-shi-yan.html
+++ b/tcpjing-shou-shi-yan.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="学 TCP/IP 协议听到最多的就是三次握手和四次挥手协议了吧。由于最近在折腾 tcpdump ，就想着实战抓一下 tcp 协议的这个握手和挥手协议。于是我在本地向内网测试机器的服务上发起了一个 POST 请求，抓到如下信息： 15:05:03.904647 IP socket-client.56558 &gt; socket-server.3000: Flags [S], seq 2090421259, win 64240, options [mss 1460,nop,wscale 8,nop,nop,sackOK], length 0 15:05:03.904699 IP socket-server.3000 &gt; socket …" />
-<meta name="keywords" content="">
+<meta name="keywords" content="tcp">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="tcp经受时延"/>
@@ -34,6 +34,7 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Note"/>
+<meta property="article:tag" content="tcp"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; tcp经受时延</title>
@@ -172,6 +173,7 @@
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/tcp.html">tcp</a>
     </p>
   </div>
 
