--- a/categories.html
+++ b/categories.html
@@ -81,10 +81,10 @@
   <div>
     <ul class="list">
       <li><a href="http://qianpeili.github.io/category/misc.html">misc</a> (1)</li>
-      <li><a href="http://qianpeili.github.io/category/note.html">note</a> (6)</li>
+      <li><a href="http://qianpeili.github.io/category/note.html">Note</a> (6)</li>
       <li><a href="http://qianpeili.github.io/category/review.html">Review</a> (1)</li>
       <li><a href="http://qianpeili.github.io/category/tips.html">Tips</a> (2)</li>
-      <li><a href="http://qianpeili.github.io/category/translation.html">translation</a> (1)</li>
+      <li><a href="http://qianpeili.github.io/category/translation.html">Translation</a> (1)</li>
     </ul>
   </div>
 </article>
