--- a/gode-yi-lai-guan-li-gong-ju-govendor.html
+++ b/gode-yi-lai-guan-li-gong-ju-govendor.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="依赖管理是我接触 go 以来，觉得比较麻烦的事情。 不过在 go-1.5 版本中，出现了一个 vendor 的概念，并且 vendor 作为一个默认功能存在于1.7之后的版本中。 vendor的概念就类似于python中的 virtualenv 建立的 env，它是一个文件夹，里面存放了项目所用的依赖。如果项目中有个文件 import 了第三方的 package，而这个 package 又存在项目的 vendor 目录中，这个文件编译的时候会从 vendor 中 import 这个 package 比如： $GOPATH | src/ | | project/ | | | main.go | | | vendor/ | | | | github.com/pkg/sftp/ | | | | golang.org/x …" />
-<meta name="keywords" content="">
+<meta name="keywords" content="go, vendor">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="Go的依赖管理工具govendor"/>
@@ -33,7 +33,9 @@
 <meta property="article:published_time" content="2017-05-22 18:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
-<meta property="article:section" content="note"/>
+<meta property="article:section" content="Note"/>
+<meta property="article:tag" content="go"/>
+<meta property="article:tag" content="vendor"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; Go的依赖管理工具govendor</title>
@@ -83,7 +85,7 @@
       
     <h1 id="gode-yi-lai-guan-li-gong-ju-govendor">Go的依赖管理工具govendor</h1>
     <p>
-          Posted on 周一 22 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">note</a>
+          Posted on 周一 22 五月 2017 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
@@ -217,6 +219,8 @@ pl  Bomber/test
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/go.html">go</a>
+      <a href="http://qianpeili.github.io/tag/vendor.html">vendor</a>
     </p>
   </div>
 
