--- a/replace-type-code-with-statestrategy.html
+++ b/replace-type-code-with-statestrategy.html
@@ -33,7 +33,7 @@
 <meta property="article:published_time" content="2016-12-26 20:55:00+08:00"/>
 <meta property="article:modified_time" content="2016-12-28 12:40:00+08:00"/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
-<meta property="article:section" content="note"/>
+<meta property="article:section" content="Note"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; Replace Type Code With State/Strategy</title>
@@ -83,7 +83,7 @@
       
     <h1 id="replace-type-code-with-statestrategy">Replace Type Code With State/Strategy</h1>
     <p>
-          Posted on 周一 26 十二月 2016 in <a href="http://qianpeili.github.io/category/note.html">note</a>
+          Posted on 周一 26 十二月 2016 in <a href="http://qianpeili.github.io/category/note.html">Note</a>
 
 
     </p>
