--- a/unicodexiao-ji-qiao.html
+++ b/unicodexiao-ji-qiao.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="今天遇到一个问题 在mysql查询日志时，发现一些unicode字符串存储变成了 u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42 这个形式，手动加\虽然可行，但毕竟不是长久的办法 所以最好的办法是将字符串中的内容，根据unicode格式转换成unicode 代码如下: import re a = &#34;u7528u6237u53d6u6d88u8ba2u5355u8bf7u6c42&#34; pattern = re.compile(&#34;\u(.{4})&#34;) maps = pattern.findall(a) s = &#34;&#34; for i in maps: tmp = unichr(int(i, 16)) s += tmp print s 就会输出原先代表的文字意思了 注： 以上是代码是python2版本， python3需要把unichr改成chr" />
-<meta name="keywords" content="">
+<meta name="keywords" content="python, unicode">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="unicode小技巧"/>
@@ -34,6 +34,8 @@
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
 <meta property="article:section" content="Tips"/>
+<meta property="article:tag" content="python"/>
+<meta property="article:tag" content="unicode"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; unicode小技巧</title>
@@ -117,6 +119,8 @@
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/python.html">python</a>
+      <a href="http://qianpeili.github.io/tag/unicode.html">unicode</a>
     </p>
   </div>
 
