--- a/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
+++ b/yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang.html
@@ -22,7 +22,7 @@
 
 <meta name="author" content="QianPeili" />
 <meta name="description" content="假设有一个活动记录表，记录了玩家的参与信息，每个玩家有多条记录，格式如下 { _id: ObjectId(), uid: 1014, score: 10 } 要求统计参与活动的玩家中，分数大于等于10的人数。 var num = db.activity_log.aggregate([ {$match: {&#34;score&#34;: {&#34;$ge&#34;: 10}}}, # 筛选 {$group: {&#34;_id&#34;: null, &#34;users&#34;: {$addToSet: &#34;$uid&#34;}}}, # 将玩家ID放入一个集合，作去重 {&#34;$project&#34;: {&#34;_id&#34;: {&#34;$size&#34;: &#34;$users&#34;}}} # 求集合大小 ]); 得出结果{&#34;_id&#34;: 46}" />
-<meta name="keywords" content="">
+<meta name="keywords" content="mongodb">
 
 <meta property="og:site_name" content="爪了个子"/>
 <meta property="og:title" content="用mongodb统计去重后的数量"/>
@@ -33,7 +33,8 @@
 <meta property="article:published_time" content="2017-03-16 18:11:00+08:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="http://qianpeili.github.io/author/qianpeili.html">
-<meta property="article:section" content="tips"/>
+<meta property="article:section" content="Tips"/>
+<meta property="article:tag" content="mongodb"/>
 <meta property="og:image" content="/images/profile.png">
 
   <title>爪了个子 &ndash; 用mongodb统计去重后的数量</title>
@@ -83,7 +84,7 @@
       
     <h1 id="yong-mongodbtong-ji-qu-zhong-hou-de-shu-liang">用mongodb统计去重后的数量</h1>
     <p>
-          Posted on 周四 16 三月 2017 in <a href="http://qianpeili.github.io/category/tips.html">tips</a>
+          Posted on 周四 16 三月 2017 in <a href="http://qianpeili.github.io/category/tips.html">Tips</a>
 
 
     </p>
@@ -113,6 +114,7 @@
   </div>
   <div class="tag-cloud">
     <p>
+      <a href="http://qianpeili.github.io/tag/mongodb.html">mongodb</a>
     </p>
   </div>
 
