git hooks crlf fix

--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>周六 15 七月 2017</dt>
+      <dd><a href="http://qianpeili.github.io/jie-jue-git-hooks-wu-fa-yun-xing-de-wen-ti.html">解决 Git Hooks 无法运行的问题</a></dd>
       <dt>周五 14 七月 2017</dt>
       <dd><a href="http://qianpeili.github.io/tong-guo-pre-hook-pan-duan-shi-fou-tui-song-zhong-fu-de-nei-rong.html">通过 pre-hook 判断是否推送重复的内容</a></dd>
       <dt>周日 09 七月 2017</dt>
